# llm-zoomcamp-ht2026

./: .gitignore  README.md  pyproject.toml
01-agentic-rag/ipynb/: HomeWork-1.ipynb  quick-start-lesson-setup.ipynb  rag_helper_hw.py
01-agentic-rag/ipynb/.ipynb_checkpoints/: 0-quick-start-api-test-checkpoint.ipynb
01-agentic-rag/notes/: week-1-notes.md
02-vector-search/ipynb/: HomeWork-2.ipynb  main.py  quickstart-vectorsearch.ipynb
02-vector-search/notes/: week-2-notes.md
