[project]
name = "llm-zoomcamp-ht2026"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.111.0",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "toyaikit>=0.0.11",
]

[tool.uv.workspace]
members = [
    "bare",
]
